cmake_minimum_required(VERSION 3.15)
project(nginx)

set(CMAKE_C_STANDARD 99)

include_directories(obj)
include_directories(src/core)
include_directories(src/event)
include_directories(src/os/unix)
include_directories(src/stream)

add_executable(nginx
        obj/ngx_auto_config.h
        obj/ngx_auto_headers.h
        obj/ngx_modules.c
        src/core/nginx.c
        src/core/nginx.h
        src/core/ngx_array.c
        src/core/ngx_array.h
        src/core/ngx_buf.c
        src/core/ngx_buf.h
        src/core/ngx_conf_file.c
        src/core/ngx_conf_file.h
        src/core/ngx_connection.c
        src/core/ngx_connection.h
        src/core/ngx_cpuinfo.c
        src/core/ngx_crc32.c
        src/core/ngx_crc32.h
        src/core/ngx_crypt.c
        src/core/ngx_crypt.h
        src/core/ngx_cycle.c
        src/core/ngx_cycle.h
        src/core/ngx_file.c
        src/core/ngx_file.h
        src/core/ngx_hash.c
        src/core/ngx_hash.h
        src/core/ngx_inet.c
        src/core/ngx_inet.h
        src/core/ngx_list.c
        src/core/ngx_list.h
        src/core/ngx_log.c
        src/core/ngx_log.h
        src/core/ngx_md5.c
        src/core/ngx_md5.h
        src/core/ngx_module.c
        src/core/ngx_module.h
        src/core/ngx_murmurhash.c
        src/core/ngx_murmurhash.h
        src/core/ngx_open_file_cache.c
        src/core/ngx_open_file_cache.h
        src/core/ngx_output_chain.c
        src/core/ngx_palloc.c
        src/core/ngx_palloc.h
        src/core/ngx_parse.c
        src/core/ngx_parse.h
        src/core/ngx_parse_time.c
        src/core/ngx_parse_time.h
        src/core/ngx_proxy_protocol.c
        src/core/ngx_proxy_protocol.h
        src/core/ngx_queue.c
        src/core/ngx_queue.h
        src/core/ngx_radix_tree.c
        src/core/ngx_radix_tree.h
        src/core/ngx_rbtree.c
        src/core/ngx_rbtree.h
        src/core/ngx_resolver.c
        src/core/ngx_resolver.h
        src/core/ngx_rwlock.c
        src/core/ngx_rwlock.h
        src/core/ngx_sha1.c
        src/core/ngx_sha1.h
        src/core/ngx_shmtx.c
        src/core/ngx_shmtx.h
        src/core/ngx_slab.c
        src/core/ngx_slab.h
        src/core/ngx_spinlock.c
        src/core/ngx_string.c
        src/core/ngx_string.h
        src/core/ngx_syslog.c
        src/core/ngx_syslog.h
        src/core/ngx_times.c
        src/core/ngx_times.h
        src/core/ngx_config.h
        src/core/ngx_core.h
        src/event/ngx_event.c
        src/event/ngx_event.h
        src/event/ngx_event_accept.c
        src/event/ngx_event_connect.c
        src/event/ngx_event_connect.h
        src/event/ngx_event_pipe.c
        src/event/ngx_event_pipe.h
        src/event/ngx_event_posted.c
        src/event/ngx_event_posted.h
        src/event/ngx_event_timer.c
        src/event/ngx_event_timer.h
        src/event/ngx_event_udp.c
        src/event/modules/ngx_epoll_module.c
        src/os/unix/ngx_alloc.c
        src/os/unix/ngx_alloc.h
        src/os/unix/ngx_channel.c
        src/os/unix/ngx_channel.h
        src/os/unix/ngx_daemon.c
        src/os/unix/ngx_dlopen.c
        src/os/unix/ngx_dlopen.h
        src/os/unix/ngx_errno.c
        src/os/unix/ngx_errno.h
        src/os/unix/ngx_files.c
        src/os/unix/ngx_files.h
        src/os/unix/ngx_linux_init.c
        src/os/unix/ngx_linux_sendfile_chain.c
        src/os/unix/ngx_posix_init.c
        src/os/unix/ngx_process.c
        src/os/unix/ngx_process.h
        src/os/unix/ngx_process_cycle.c
        src/os/unix/ngx_process_cycle.h
        src/os/unix/ngx_readv_chain.c
        src/os/unix/ngx_recv.c
        src/os/unix/ngx_send.c
        src/os/unix/ngx_setaffinity.c
        src/os/unix/ngx_setaffinity.h
        src/os/unix/ngx_setproctitle.c
        src/os/unix/ngx_setproctitle.h
        src/os/unix/ngx_shmem.c
        src/os/unix/ngx_shmem.h
        src/os/unix/ngx_socket.c
        src/os/unix/ngx_socket.h
        src/os/unix/ngx_time.c
        src/os/unix/ngx_time.h
        src/os/unix/ngx_udp_recv.c
        src/os/unix/ngx_udp_send.c
        src/os/unix/ngx_udp_sendmsg_chain.c
        src/os/unix/ngx_user.c
        src/os/unix/ngx_user.h
        src/os/unix/ngx_writev_chain.c
        src/os/unix/ngx_linux_config.h
        src/stream/ngx_stream.c
        src/stream/ngx_stream.h
        src/stream/ngx_stream_access_module.c
        src/stream/ngx_stream_core_module.c
        src/stream/ngx_stream_geo_module.c
        src/stream/ngx_stream_handler.c
        src/stream/ngx_stream_limit_conn_module.c
        src/stream/ngx_stream_log_module.c
        src/stream/ngx_stream_map_module.c
        src/stream/ngx_stream_proxy_module.c
        src/stream/ngx_stream_return_module.c
        src/stream/ngx_stream_script.c
        src/stream/ngx_stream_script.h
        src/stream/ngx_stream_split_clients_module.c
        src/stream/ngx_stream_upstream.c
        src/stream/ngx_stream_upstream.h
        src/stream/ngx_stream_upstream_hash_module.c
        src/stream/ngx_stream_upstream_least_conn_module.c
        src/stream/ngx_stream_upstream_random_module.c
        src/stream/ngx_stream_upstream_round_robin.c
        src/stream/ngx_stream_upstream_round_robin.h
        src/stream/ngx_stream_upstream_zone_module.c
        src/stream/ngx_stream_variables.c
        src/stream/ngx_stream_variables.h
        src/stream/ngx_stream_write_filter_module.c
        )

target_link_libraries(nginx pthread dl)